--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-manifest": "^2.4.14",
+    "gatsby-plugin-nprogress": "^2.3.12",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sass": "^2.3.10",
-    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-typography": "^2.5.10",
     "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-contentful": "^2.3.29",
@@ -24,6 +25,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-loadingg": "^1.7.2",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19"
