--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "gatsby-source-contentful": "^2.3.29",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.7",
+    "howler": "^2.2.0",
+    "lottie-web": "^5.7.3",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-howler": "^4.0.0",
     "react-loadingg": "^1.7.2",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
