--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gatsby-transformer-sharp": "^2.5.7",
     "howler": "^2.2.0",
     "lottie-web": "^5.7.3",
-    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -34,7 +33,8 @@
     "typography-theme-fairy-gates": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "sass": "^1.54.2"
   },
   "keywords": [
     "gatsby"
