first commit in a long time

--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "resolutions": {
+    "node-sass": "^6.0.1"
   }
 }
